# python-project-83

./: .env  .gitignore  Makefile  README.md  database.sql  pyproject.toml
page_analyzer/: __init__.py  app.py  database.py  logger.py  validator.py
page_analyzer/templates/: index.html  main.html  show_one_url.html  urls.html
page_analyzer/templates/errors/: 404.html  500.html
