[project]
name = "hexlet-code"
version = "0.1.0"
description = "Analyzes specified pages for SEO suitability"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "flake8>=7.1.2",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "psycopg2>=2.9.10",
    "requests>=2.32.3",
    "validators>=0.34.0",
]
